<resources>
    <string name="app_name">Student App</string>

    <string name="students_list">Students List</string>
    <string name="students_details">Students Details</string>
    <string name="add_student">New Student</string>
    <string name="edit_student">Edit Student</string>

    <string name="name_label">Name</string>
    <string name="id_label">Id</string>
    <string name="phone_label">Phone</string>
    <string name="address_label">Address</string>
    <string name="student_presence_label">Checked</string>

    <string name="add_button">+</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_student_text">Delete</string>
    <string name="save_student_text">Save</string>
    <string name="cancel_text">Cancel</string>

    <string name="not_available">N/A</string>
    <string name="placeholder_text">TextView</string>
    <string name="back_button_description">Navigate back</string>
    <string name="more_options_description">More options</string>
</resources>