<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentDetailsActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/student_id_field_text_view"
        app:layout_constraintStart_toEndOf="@+id/student_id_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_phone_field_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_label"
        app:layout_constraintStart_toStartOf="@+id/student_id_field_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_id_field_text_view" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:srcCompat="@drawable/avatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_name_field_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_id_field_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/id_label"
        app:layout_constraintStart_toStartOf="@+id/student_name_field_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_name_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/student_name_field_text_view"
        app:layout_constraintStart_toEndOf="@+id/student_name_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/student_phone_field_text_view"
        app:layout_constraintStart_toEndOf="@+id/student_phone_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_address_field_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address_label"
        app:layout_constraintStart_toStartOf="@+id/student_phone_field_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_phone_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/student_address_field_text_view"
        app:layout_constraintStart_toEndOf="@+id/student_address_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student_presence"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/student_presence_checkbox"
        app:layout_constraintStart_toEndOf="@+id/student_presence_checkbox" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/student_presence_checkbox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/student_address_field_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_address_field_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:background="#DEDADA"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/students_details"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_student_details_button"
        android:layout_width="136dp"
        android:layout_height="66dp"
        android:layout_margin="16dp"
        android:text="@string/edit_button"
        android:textColor="#424240"
        android:textSize="18sp"
        app:backgroundTint="#DEDADA"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>